# ChangeLog for sys-apps/man-pages
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-pages/ChangeLog,v 1.28 2004/06/30 17:48:50 agriffis Exp $

  30 Jun 2004; Aron Griffis <agriffis@gentoo.org> man-pages-1.65.ebuild,
  man-pages-1.66.ebuild:
  sync IUSE (missing)

*man-pages-1.67 (21 May 2004)

  25 May 2004; Nicholas Jones <carpaski@gentoo.org> man-pages-1.67.ebuild:
  Fix for portage-2.0.51_pre9's new default make in src_compile via true.

  21 May 2004; Jon Portnoy <avenj@gentoo.org> man-pages-1.67.ebuild :
  Version bump.

*man-pages-1.66 (18 Mar 2004)

  18 Mar 2004; Seemant Kulleen <seemant@gentoo.org> man-pages-1.64.ebuild,
  man-pages-1.66.ebuild:
  version bump

  02 Mar 2004; Brian Jackson <iggy@gentoo.org> man-pages-1.65.ebuild:
  adding initial s390 support

*man-pages-1.65 (24 Jan 2004)

  24 Jan 2004; Mike Frysinger <vapier@gentoo.org> :
  Version bumpage.

*man-pages-1.64 (09 Dec 2003)

  09 Dec 2003; Seemant Kulleen <seemant@gentoo.org> man-pages-1.60.ebuild,
  man-pages-1.64.ebuild:
  version bump

*man-pages-1.61 (13 Nov 2003)

  13 Nov 2003; Seemant Kulleen <seemant@gentoo.org> man-pages-1.61.ebuild:
  version bump

*man-pages-1.60 (13 Oct 2003)

  13 Oct 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bumpage.

*man-pages-1.56 (25 Mar 2003)

  25 May 2003; Martin Holzer <mholzer@gentoo.org> man-pages-1.54.ebuild,
  man-pages-1.55.ebuild, man-pages-1.56.ebuild:
  SRC_URI="mirror://kernel/linux/docs/${MY_PN}/${P}.tar.bz2"now uses
  mirror://kernel

  25 Mar 2003; Daniel Robbins <drobbins@gentoo.org> man-pages-1.56.ebuild:
  new upstream release; unmasked on all arches.

  21 Feb 2003; Zach Welch <zwelch@gentoo.org> man-pages-1.54.ebuild
  man-pages-1.55.ebuild : Added arm to keywords.

*man-pages-1.55 (09 Feb 2003)

  24 Feb 2003; Nicholas Wourms <dragon@gentoo.org> man-pages-1.55.ebuild :
  Mark as stable for mips.  Can man-pages really break?
