@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/man-pages
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-pages/ChangeLog,v 1.28 2004/06/30 17:48:50 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-pages/ChangeLog,v 1.29 2004/11/15 18:52:57 vapier Exp $
+
+*man-pages-1.70 (15 Nov 2004)
+
+  15 Nov 2004; Mike Frysinger <vapier@gentoo.org> +man-pages-1.70.ebuild:
+  Version bump.
 
   30 Jun 2004; Aron Griffis <agriffis@gentoo.org> man-pages-1.65.ebuild,
   man-pages-1.66.ebuild:
